--- a/css/window.css
+++ b/css/window.css
@@ -1,14 +1,11 @@
-.m-window-bounding-box{
+.m-window-bounding-box {
 	position: fixed;
-	height: 300px;
-	width: 500px;
+	z-index: 9999;
+	background: #fff;
 	border: 1px solid #000;
-	top: 100px;
-	/*left: 50%;*/
-	/*margin-left: -250px;*/
-	box-shadow:  0 0 12px rgba(0,0,0,0.5);
+	box-shadow: 0 0 12px rgba(0, 0, 0, 0.5);
 }
-.m-window-bounding-box .close{
+.m-window-bounding-box .close {
 	position: absolute;
 	left: 50%;
 	bottom: 50px;
@@ -16,3 +13,149 @@
 	width: 100px;
 	margin-left: -50px;
 }
+.m-window-bounding-box .header {
+	padding: 5px;
+	background: #333;
+	color: #fff;
+	font-size: 20px;
+	text-align: center;
+}
+.m-window-bounding-box .content {
+	padding: 10px;
+	color: #000;
+}
+.m-window-bounding-box .close-btn{
+	position: absolute;
+	right: 5px;
+	top: 5px;
+	width: 20px;
+	height: 20px;
+}
+.m-window-bounding-box .close-btn:before{
+	position: absolute;
+	content: '.';
+	left: 0;
+	top: 0;
+	width: 28px;
+	height: 1px;
+	background: #fff;
+	font-size: 0;
+	line-height: 0;
+	vertical-align: middle;
+	-webkit-transform-origin: 0 0;
+	-moz-transform-origin: 0 0;
+	-ms-transform-origin: 0 0;
+	-o-transform-origin: 0 0;
+	transform-origin: 0 0; 
+	-webkit-transform: rotate(41deg);
+}
+.m-window-bounding-box .close-btn:after {
+	position: absolute;
+	content: '.';
+	left: 0;
+	top: 18px;
+	width: 28px;
+	height: 1px;
+	background: #fff;
+	font-size: 0;
+	line-height: 0;
+	vertical-align: middle;
+	-webkit-transform-origin: left bottom;
+	-moz-transform-origin: left bottom;
+	-ms-transform-origin: left bottom;
+	-o-transform-origin: left bottom;
+	transform-origin: left bottom;
+	-webkit-transform: rotate(-41deg);
+}
+/* =======皮肤======= */
+.m-window-bounding-box-skina{
+	z-index: 9999;
+	position: fixed;
+	background: #fff;
+	border: 1px solid #000;
+	box-shadow: 0 0 12px rgba(0, 0, 0, 0.5);
+}
+.m-window-bounding-box-skina .close {
+	position: absolute;
+	right: 20px;
+	bottom: 50px;
+	height: 30px;
+	width: 100px;
+}
+.m-window-bounding-box-skina .header {
+	padding: 5px;
+	background: deepskyblue;
+	color: #fff;
+	font-size: 20px;
+	text-align: center;
+}
+.m-window-bounding-box-skina .content {
+	padding: 10px;
+	color: #000;
+	text-align: center;
+}
+.m-window-bounding-box-skina .close-btn{
+	position: absolute;
+	right: 5px;
+	top: 5px;
+	width: 20px;
+	height: 20px;
+	border: 1px solid #f0f;
+}
+.m-window-bounding-box-skina .close-btn:before{
+	position: absolute;
+	content: '.';
+	left: 0;
+	top: 0;
+	width: 28px;
+	height: 1px;
+	background: #f0f;
+	font-size: 0;
+	line-height: 0;
+	vertical-align: middle;
+	-webkit-transform-origin: 0 0;
+	-moz-transform-origin: 0 0;
+	-ms-transform-origin: 0 0;
+	-o-transform-origin: 0 0;
+	transform-origin: 0 0; 
+	-webkit-transform: rotate(41deg);
+}
+.m-window-bounding-box-skina .close-btn:after {
+	position: absolute;
+	content: '.';
+	left: 0;
+	top: 18px;
+	width: 28px;
+	height: 1px;
+	background: #f0f;
+	font-size: 0;
+	line-height: 0;
+	vertical-align: middle;
+	-webkit-transform-origin: left bottom;
+	-moz-transform-origin: ;
+	-ms-transform-origin: ;
+	-o-transform-origin: ;
+	transform-origin: ;;
+	-webkit-transform: rotate(-41deg);
+}
+/* ==================== */
+body,html{
+	height: 100%;
+}
+.m-window-mask{
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	opacity: 0.2;
+}
+
+
+
+
+
+
+
+
